--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
             content="width=device-width, initial-scale=1.0"
         />
         <title>Canvas</title>
-        <script async src="./index.js"></script>
-        <link href="./index.css" rel="stylesheet" />
+        <script async src="./src/index.js"></script>
+        <link href="./src/index.css" rel="stylesheet" />
+        <link href="./src/images/favicon.ico">
     </head>
     <body>
         <canvas class="canvas"></canvas>
         <img
             class="image"
             style="display: none"
-            src="./est---------.jpg"
+            src="./src/est.jpg"
             crossorigin="anonymous"
         />
         <br />
