улучшена адаптивная верстка, изменена кнопка поделиться

--- a/index.html
+++ b/index.html
@@ -26,21 +26,27 @@
                 src="./src/images/est.jpg"
                 crossorigin="anonymous"
             />
-            <div class="main-container">
+            <div class="main__container">
                 <p class="main__text">
-                    Введите необходимое количество рублей
+                    Введите необходимое количество рублей:
                 </p>
                 <input class="input" type="number" />
-                <p class="main__text">Запросить рубли</p>
-                <button class="download-button">
-                    <div class="download-button-icon"></div>
+                <p class="main__text">Запросить рубли:</p>
+                <button class="main__download-button button">
+                    <div
+                        class="
+                            main__download-button__icon
+                            button__icon
+                        "
+                    ></div>
+                    Скачать
                 </button>
-                <br>
-                <button class="download-button share">
+                <button class="main__share-button button">
+                    <div
+                        class="main__share-button__icon button__icon"
+                    ></div>
                     Поделиться
-                    <i class="fa fa-share-square"></i>
                 </button>
-                <div class="result"></div>
             </div>
         </main>
     </body>
