--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
                 </button>
             </div>
         </main>
+        <footer class="footer">
+            <p class="footer__copyright">&copy; 2021 Rubli</p>
+        </footer>
     </body>
 </html>
