фикс шрифта, фикс паддинга футера, добавлен марджин иконкам на кнопках

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img
                 class="image"
                 style="display: none"
-                src="./src/images/est.jpg"
+                src="./src/images/clearrubli.png"
                 crossorigin="anonymous"
             />
             <div class="main__container">
