--- a/index.html
+++ b/index.html
@@ -52,5 +52,6 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2021 Rubli</p>
         </footer>
+        <div style="display: none">костыль для гитхаба</div>
     </body>
 </html>
