добавлено автоматическое переключение на темную тему

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <link href="./src/images/favicon.ico" rel="shortcut icon" />
     </head>
 
-    <body>
-        <header class="header">
-            <h1 class="header__title">Клянчим деньги</h1>
+    <body class="dark-scheme">
+        <header class="header dark-scheme">
+            <h1 class="header__title dark-scheme">Клянчим деньги</h1>
         </header>
         <main class="main">
-            <canvas class="canvas"
+            <canvas class="canvas dark-scheme"
                 >Что-то случилось с изображением :(</canvas
             >
             <img
@@ -30,20 +30,27 @@
                 <p class="main__text">
                     Введите необходимое количество рублей:
                 </p>
-                <input class="input" type="number" />
+                <input class="input dark-scheme" type="number" />
                 <p class="main__text">Запросить рубли:</p>
-                <button class="main__download-button button">
+                <button
+                    class="main__download-button button dark-scheme"
+                >
                     <div
                         class="
                             main__download-button__icon
                             button__icon
+                            dark-scheme
                         "
                     ></div>
                     Скачать
                 </button>
-                <button class="main__share-button button">
+                <button class="main__share-button button dark-scheme">
                     <div
-                        class="main__share-button__icon button__icon"
+                        class="
+                            main__share-button__icon
+                            button__icon
+                            dark-scheme
+                        "
                     ></div>
                     Поделиться
                 </button>
