--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2021 Rubli</p>
         </footer>
-        <div style="display: none">костыль для гитхаба</div>
+        <div style="display: none">костыль гитхаб</div>
     </body>
 </html>
